--- a/style.css
+++ b/style.css
@@ -2,3 +2,33 @@
     margin: 0;
     padding: 0;
 }
+
+body{
+    color: white;
+    background-color: rgb(45, 51, 51);
+}
+
+header{
+    background-color: aquamarine;
+    margin-bottom: 100px;
+}
+
+.sobre{
+    display: flex;
+}
+
+.sobre .foto{
+
+    margin-left: 30px;
+}
+
+.sobre .foto .background{
+    padding: 20px;
+    background-color: azure;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 20px;
+}
+
+.texto{
+    margin-left: 30px;
+}
