--- a/style.css
+++ b/style.css
@@ -1,34 +1,105 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Work Sans', sans-serif;
+
 }
 
-body{
+body{   
     color: white;
     background-color: rgb(45, 51, 51);
 }
 
 header{
-    background-color: aquamarine;
     margin-bottom: 100px;
 }
 
+
+
 .sobre{
     display: flex;
+    border: solid red 1px;
 }
 
-.sobre .foto{
+.sobre .fotoperfil{
 
     margin-left: 30px;
-}
-
-.sobre .foto .background{
     padding: 20px;
     background-color: azure;
-    font-family: 'Work Sans', sans-serif;
     font-size: 20px;
 }
 
-.texto{
-    margin-left: 30px;
+
+
+.info .h3{
+    background-color: white;
+    color: black;
+    width: 200px;
+    padding: 20px 10px;
+    margin-left: 50px;
+    text-align: center;
+}
+
+.txt-animado{
+    font-size: 20px;
+    margin-left: 50px
+
+}
+
+.txt-animado span{
+    position: relative;
+
+}
+
+.txt-animado span::before{
+    content: "";
+    color: #fff;
+    animation: palavras 20s infinite;
+}
+
+.txt-animado span::after{
+    content: "";
+    position: absolute;
+    height: 110%;
+    border-left: 2px solid white;
+    opacity: 1;
+    right: -10px;
+    animation: cursor .8s infinite, digita 20s steps(70) infinite;
+    width: calc(100% + 13px);
+    background-color: rgb(45, 51, 51) ;
+}
+
+@keyframes cursor{
+    0%{
+        border-left: 2px solid rgb(45, 51, 51);
+    }
+
+}
+
+@keyframes digita{
+    10%, 15%, 30%, 35%, 50%, 55%, 70%, 75%, 90%, 95%{
+        width: 0;
+    }
+    5%, 20%, 25%, 40%, 45%, 60%, 65%, 80%, 85%{
+        width: calc(100% + 13px);
+    }
+}
+
+@keyframes palavras {
+    0%, 20%{
+        content: "Tenho 23 anos. moro no Espirito Santo-Brasil";
+    }
+    21%, 40%{
+        content: "Estudo no Instituto Federal do Espirito Santo - IFES";
+    }
+    41%, 60%{
+        content: "Gosto de jogos onlines, principalmente cooperativos";
+    }
+    61%, 80%{
+        content: "Sou Fã de Doctor Who";
+    }
+    81%, 100%{
+        content: "Amo esportes e atualmente faço capoeira e ando de skate";
+    }
+    
 }
