--- a/style.css
+++ b/style.css
@@ -14,6 +14,100 @@ header{
     margin-bottom: 100px;
 }
 
+
+.skill{
+    width: 450px;
+    color: #fff;
+    padding: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    border-radius: 40px;
+}
+
+.skill li{
+    margin: 20px 0;
+    padding: 10px;
+    list-style: none;
+}
+
+.bar{
+    background: #353b48;
+    display: block;
+    height: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+
+}
+
+.bar:hover{
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+
+}
+
+.bar div{
+    height: 20px;
+    float: left;
+    background: linear-gradient(135deg, rgba(236, 0, 140, 1)0%, rgba(252, 103, 103, 1)100%);
+}
+
+.html{
+    width: 90%;
+    animation: html 3s;
+}
+
+.css{
+    width: 80%;
+    animation: css 3s;
+}
+.js{
+    width: 20%;
+    animation: js 3s;
+}
+.vue{
+    width: 10%;
+    animation: vue 3s;
+}
+
+@keyframes html{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 90%;
+    }
+}
+
+@keyframes css{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 80%;
+    }
+}
+
+@keyframes js{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 20%;
+    }
+}
+
+@keyframes vue{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 10%;
+    }
+}
+
+
+
 .sobre{
     display: flex;
 }
@@ -24,6 +118,7 @@ header{
     padding: 20px;
     background-color: azure;
     font-size: 20px;
+    max-height: 400px;
 }
 
 .info .h3{
@@ -33,16 +128,17 @@ header{
     padding: 20px 10px;
     margin-left: 50px;
     text-align: center;
+    border-radius: 5px;
 }
 
 .txt-animado{
     font-size: 20px;
-    margin-left: 50px
-
+    margin-left: 50px;
 }
 
 .txt-animado span{
     position: relative;
+    font-size: 25px;
 
 }
 
@@ -50,6 +146,7 @@ header{
     content: "";
     color: #fff;
     animation: palavras 20s infinite;
+    
 }
 
 .txt-animado span::after{
@@ -60,8 +157,10 @@ header{
     opacity: 1;
     right: -10px;
     animation: cursor .8s infinite, digita 20s steps(70) infinite;
+    height:32px;
     width: calc(100% + 13px);
     background-color: rgb(45, 51, 51) ;
+    
 }
 
 @keyframes cursor{
@@ -91,7 +190,7 @@ header{
         content: "Gosto de jogos onlines, principalmente cooperativos.";
     }
     61%, 80%{
-        content: "Sou Fã de Doctor Who";
+        content: "Sou Fã de Doctor Who.";
     }
     81%, 100%{
         content: "Amo esportes e atualmente faço capoeira e ando de skate.";
