--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Nunito', sans-serif;
 
 }
 
@@ -65,10 +65,7 @@ header{
     width: 20%;
     animation: js 3s;
 }
-.vue{
-    width: 10%;
-    animation: vue 3s;
-}
+
 
 @keyframes html{
     0%{
@@ -97,17 +94,6 @@ header{
     }
 }
 
-@keyframes vue{
-    0%{
-        width: 0%;
-    }
-    100%{
-        width: 10%;
-    }
-}
-
-
-
 .sobre{
     display: flex;
 }
@@ -115,17 +101,17 @@ header{
 .sobre .fotoperfil{
 
     margin-left: 30px;
-    padding: 20px;
+    padding: 30px 30px 450px 30px;
     background-color: azure;
     font-size: 20px;
     max-height: 400px;
 }
 
-.info .h3{
-    background-color: white;
+.curiosidades .h3{
+    background-color: rgb(255, 255, 255);
     color: black;
-    width: 200px;
-    padding: 20px 10px;
+    width: 350px;
+    padding: 10px 10px;
     margin-left: 50px;
     text-align: center;
     border-radius: 5px;
@@ -196,4 +182,41 @@ header{
         content: "Amo esportes e atualmente faço capoeira e ando de skate.";
     }
     
+}
+
+.box{
+    background: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    padding: 20px;
+    min-width: 400px;
+    max-width: 400px;
+    
+}
+
+.curriculo span{
+    font-size: 40px;
+    margin-top: 70px;
+
+}
+
+.curriculo h3{
+    margin-top: 70px;
+    color: rgb(91, 255, 241);
+}
+
+.curriculo h5{
+    font-weight: 700;
+}
+.curriculo ul{
+    margin-top: 30px;
+    word-break: break-word;
+    color: black;
+    font-weight: 700;
+    
+}
+
+.curriculo ul li{
+    font-weight: 300;
 }
