--- a/style.css
+++ b/style.css
@@ -96,6 +96,8 @@ header{
 
 .sobre{
     display: flex;
+    background: linear-gradient(180deg, rgb(45, 51, 51)0%, rgba(36, 41, 41, 0.459)100%);
+
 }
 
 .sobre .fotoperfil{
@@ -120,6 +122,7 @@ header{
 .txt-animado{
     font-size: 20px;
     margin-left: 50px;
+    margin-bottom: 40px;
 }
 
 .txt-animado span{
@@ -145,7 +148,7 @@ header{
     animation: cursor .8s infinite, digita 20s steps(70) infinite;
     height:32px;
     width: calc(100% + 13px);
-    background-color: rgb(45, 51, 51) ;
+    background-color: #2c3232 ;
     
 }
 
@@ -195,15 +198,20 @@ header{
     
 }
 
+.curriculo{
+    background: linear-gradient(180deg, rgb(45, 51, 51)0%, rgba(36, 41, 41, 0.459)100%);
+}
+
 .curriculo span{
     font-size: 40px;
-    margin-top: 70px;
+    margin-top: 45px;
 
 }
 
 .curriculo h3{
-    margin-top: 70px;
+    margin-top: 20px;
     color: rgb(91, 255, 241);
+
 }
 
 .curriculo h5{
