--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ header{
     background-color: azure;
     font-size: 20px;
     max-height: 400px;
+    text-align: center;
 }
 
 .curiosidades .h3{
@@ -195,6 +196,7 @@ header{
     padding: 20px;
     min-width: 400px;
     max-width: 400px;
+    margin-bottom: 40px;
     
 }
 
@@ -227,4 +229,25 @@ header{
 
 .curriculo ul li{
     font-weight: 300;
+}
+
+.contato span{
+    font-size: 40px;
+    margin-top: 45px;
+
+}
+
+.iconfyicon{
+    text-align: center;
+    font-size: 18px;
+    color: black;
+}
+
+.iconfyicon a{
+    text-decoration: none;
+    color: black;
+}
+
+.iconfyicon a:visited{
+    color: black;
 }
