--- a/style.css
+++ b/style.css
@@ -5,9 +5,16 @@
 
 }
 
+html {
+
+    scroll-behavior: smooth;
+}
+
+
 body{   
     color: white;
     background-color: rgb(45, 51, 51);
+    scroll-behavior: smooth;
 }
 
 header{
@@ -15,7 +22,7 @@ header{
 }
 
 
-.skill{
+.habilidades{
     width: 450px;
     color: #fff;
     padding: 10px;
@@ -23,13 +30,13 @@ header{
     border-radius: 40px;
 }
 
-.skill li{
+.habilidades li{
     margin: 20px 0;
     padding: 10px;
     list-style: none;
 }
 
-.bar{
+.barra{
     background: #353b48;
     display: block;
     height: 20px;
@@ -41,12 +48,12 @@ header{
 
 }
 
-.bar:hover{
+.barra:hover{
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 
 }
 
-.bar div{
+.barra div{
     height: 20px;
     float: left;
     background: linear-gradient(135deg, rgba(236, 0, 140, 1)0%, rgba(252, 103, 103, 1)100%);
@@ -94,13 +101,13 @@ header{
     }
 }
 
-.sobre{
+.home{
     display: flex;
     background: linear-gradient(180deg, rgb(45, 51, 51)0%, rgba(36, 41, 41, 0.459)100%);
 
 }
 
-.sobre .fotoperfil{
+.home .fotoperfil{
 
     margin-left: 30px;
     padding: 30px 30px 450px 30px;
@@ -108,10 +115,11 @@ header{
     font-size: 20px;
     max-height: 400px;
     text-align: center;
+    border-radius: 5px;
 }
 
 .curiosidades .h3{
-    background-color: rgb(255, 255, 255);
+    background-color: azure;
     color: black;
     width: 350px;
     padding: 10px 10px;
@@ -189,7 +197,7 @@ header{
 }
 
 .box{
-    background: #ffffff;
+    background: azure;
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -231,23 +239,47 @@ header{
     font-weight: 300;
 }
 
+
+.contato{
+    background: linear-gradient(180deg, rgb(45, 51, 51)0%, rgba(36, 41, 41, 0.459)100%);
+
+}
+
 .contato span{
     font-size: 40px;
     margin-top: 45px;
 
 }
 
-.iconfyicon{
+.iconifyicon{
     text-align: center;
     font-size: 18px;
     color: black;
 }
 
-.iconfyicon a{
+a{
     text-decoration: none;
     color: black;
 }
 
-.iconfyicon a:visited{
+a:visited{
     color: black;
+}
+
+
+.footer{
+    margin-top: 10px;
+    font-size: 14px;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    background: linear-gradient(180deg, rgb(45, 51, 51)0%, rgba(36, 41, 41, 0.459)100%);
+}
+
+.footer a{
+    color: rgb(91, 255, 241);
+}
+
+.footer a:visited{
+    color: rgb(91, 255, 241);
 }
