--- a/style.css
+++ b/style.css
@@ -118,6 +118,10 @@ header{
     border-radius: 5px;
 }
 
+.fotoperfil img{
+    border-radius: 5px;
+}
+
 .curiosidades .h3{
     background-color: azure;
     color: black;
@@ -196,7 +200,7 @@ header{
     
 }
 
-.box{
+.boxcurriculo{
     background: azure;
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 10px;
@@ -208,26 +212,41 @@ header{
     
 }
 
-.curriculo{
+.boxcursos{
+    background: azure;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    padding: 20px;
+    margin-left: 140px;
+    margin-right: 140px;
+    margin-top: 20px;
+}  
+
+.cursos{
+    padding-bottom: 40px;
+}
+
+.layout{
     background: linear-gradient(180deg, rgb(45, 51, 51)0%, rgba(36, 41, 41, 0.459)100%);
 }
 
-.curriculo span{
+.layout span{
     font-size: 40px;
     margin-top: 45px;
 
 }
 
-.curriculo h3{
+.layout h3{
     margin-top: 20px;
     color: rgb(91, 255, 241);
 
 }
 
-.curriculo h5{
+.layout h5{
     font-weight: 700;
 }
-.curriculo ul{
+.layout ul{
     margin-top: 30px;
     word-break: break-word;
     color: black;
@@ -235,7 +254,7 @@ header{
     
 }
 
-.curriculo ul li{
+.layout ul li{
     font-weight: 300;
 }
 
